--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       
          </div>
 <div class="btn-group">
-  <a href="https://drive.google.com/file/d/1E8125o9zHzFea4ERJYBzoybNDywUUs14/view?usp=sharing" class="btn">Resume
+  <a href="https://drive.google.com/file/d/1cQumBDZBuP8pHTQtYvA7EKvpQ-kfaZyq/view?usp=sharing" class="btn">Resume
   </a>
   <a href="#Contact" class="btn">Contact</a>
 </div>
@@ -155,9 +155,9 @@
 
 
       <div class="projects-item">
-        <h2>LDA UI Design</h2>
-        <p>LDA - Light Digital Agency UI design <br>
-        A clean, modern UI concept crafted for forward thinking digital agency.Designed in figma, this interface emphasizes minimalism, clarity and user engagement</p>
+        <h2>Hungerr</h2>
+        <p>Personal project / Tools : Figma<br>
+       I Create Hungerr User Interface design a food delivery mobile app with user friendly intraction, intuitive navigation and modern ideas.</p>
           <a href="https://www.figma.com/proto/IWlhNaELvqnbWk8Kct03G8?node-id=0-1&t=KtM0w4VL1Q95VaXx-6">Link</a>
       </div>
 
