--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
         <h2>Hungerr</h2>
         <p>Personal project / Tools : Figma<br>
        I Create Hungerr User Interface design a food delivery mobile app with user friendly intraction, intuitive navigation and modern ideas.</p>
-          <a href="https://www.figma.com/proto/IWlhNaELvqnbWk8Kct03G8?node-id=0-1&t=KtM0w4VL1Q95VaXx-6">Link</a>
+          <a href="https://www.figma.com/design/9wlBe94Z3HYjL2LekSQUEi/Hungerr-The-food-Delivery-app?node-id=0-1&p=f&t=0bRFHXCwhFBSbDAM-0">Link</a>
       </div>
 
     </div>
